<resources>
    <string name="app_name">ShibbyApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="main_server">https://shibbyapp.herokuapp.com</string>
    <string name="version_host">https://api.github.com/repos/kraowx/shibbyapp</string>
    <string name="github_repo">https://github.com/kraowx/shibbyapp/releases</string>

    <string name="menu_allfiles">All Files</string>
    <string name="menu_tags">Tags</string>
    <string name="menu_series">Series</string>
    <string name="menu_patreonfiles">Patreon Files</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_userfiles">User Files</string>
    <string name="menu_playlists">Playlists</string>
</resources>
